--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://api.fontshare.com/v2/css?f[]=clash-grotesk@300,500&display=swap');
+@import url('https://api.fontshare.com/v2/css?f[]=satoshi@700,500,300&f[]=chillax@500,200&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -17,11 +19,13 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(255, 255, 255);
+  font-family: 'Satoshi';
+}
+
+@layer components {
+  .icon {
+    @apply hidden xl:inline-flex p-2 h-10 w-10 bg-gray-200 rounded-full cursor-pointer
+    hover:bg-gray-300;
+  }
 }
