updated user avatars feature

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -2,6 +2,10 @@ font-clash {
     font-family: 'clash-grotesk';
 }
 
-* {
-    font-family: '', monospace;
+@font-face {
+    font-family: "CustomFont";
+    src: url("https://api.fontshare.com/v2/css?f[]=excon@300&display=swap");
+}
+*{
+    font-family: 'Clash Grotesk';
 }
